Wed Mar 19 11:17:21 2003  Gary Wong  <gtw@gnu.org>

	* gtkgame.h: [!WIN32] Prototype GTKWinCopy().

Fri Mar 14 21:28:43 2003  Oystein Johansen <oystein@gnubg.org>

        * gnubg.c: bugfix in outputv() and outputerrv()

	* gnubg.c, gtkgame.c: clean up in the WinCopy/TextToClipboard functions 

Thu Mar 13 21:28:43 2003  Joern Thyssen  <jth@gnubg.org>

	Better support for variations in SGF, SGG, and TMG.

	* eval.c, gtkgame.c, show.c, set.c, gnubg.c: rename bgv to bgvDefault.
	* play.c (InitBoard): new parameter bgv. Change all callers.
	* sgf.c: better support for variations in SGF.
	* play.c: better support for variations during play.
	* import.c: better support for variations during import of SGG and TMG.

Thu Mar 13 17:56:15 2003  Joern Thyssen  <jth@gnubg.org>

	* record.c (RecordAddGame): update statistics before writing
	player records.
	(reported by Holger Bochnig)

Mon Mar 10 21:23:38 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (GTKRecordShow): close file the right place.
	(reported by Holger Bochnig)

Sun Mar  9 11:23:53 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (GTKSet): disable "[next|prev] rolled" when no
	game is in progress.
	(contributed by Holger Bochnig)

Sun Mar  9 09:24:49 2003  Joern Thyssen  <jth@gnubg.org>

	Import Snowie .txt (based on Jim's perl script)

	* gnubg.c: new command "import snowietxt ..."
	* gnubg.c (CommandImportSnowieTxt): new function.
	* import.c (ImportSnowieTxt, ParseSnowieTxt): new functions.
	* gtkgame.c: new menu entry.

	* AUTHORS: some reshuffling.

Sat Mar  8 13:38:44 2003  Joern Thyssen  <jth@gnubg.org>

	* text.c (OutputCubeAnalysis), gtkcube.c (CubeAnalysis), 
	html.c (HTMLPrintMoveAnalysis): clarify output.
	* text.c (OutputEvalContext): write "cubeful" for cube decisions.

	* gtkcube.c: use new function TextToClipboard.

Sat Mar  8 11:03:05 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ParseMatMove): fix .mat import to handle
	resignations by player on roll after she rolled.