@@ -1,3 +1,8 @@
+Wed Mar 19 18:53:49 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* gnubg.c (real_main): special initialisation for TMG and SGG paths.
+	(suggested by Albert Silver & Nis Joergensen)
+
 Wed Mar 19 11:17:21 2003  Gary Wong  <gtw@gnu.org>
 
 	* gtkgame.h: [!WIN32] Prototype GTKWinCopy().
